WebKit Bugzilla
New
Browse
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
248471
First subtest is failing in css/css-typed-om/the-stylepropertymap/computed/computed.tentative.html
https://bugs.webkit.org/show_bug.cgi?id=248471
Summary
First subtest is failing in css/css-typed-om/the-stylepropertymap/computed/co...
Chris Dumez
Reported
2022-11-29 09:18:32 PST
First subtest is failing in css/css-typed-om/the-stylepropertymap/computed/computed.tentative.html.
Attachments
Add attachment
proposed patch, testcase, etc.
Chris Dumez
Comment 1
2022-11-29 09:26:17 PST
Pull request:
https://github.com/WebKit/WebKit/pull/6919
EWS
Comment 2
2022-12-01 10:03:44 PST
Committed
257245@main
(310730c00382): <
https://commits.webkit.org/257245@main
> Reviewed commits have been landed. Closing PR #6919 and removing active labels.
Radar WebKit Bug Importer
Comment 3
2022-12-01 10:04:19 PST
<
rdar://problem/102866090
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug