First subtest is failing in css/css-typed-om/the-stylepropertymap/computed/computed.tentative.html https://bugs.webkit.org/show_bug.cgi?id=248471

Reviewed by Antoine Quint.

The first subtest was failing in WebKit. What it did is check that the computed
StylePropertyMap contains every CSS property in it. It did so by getting all
CSS property names via window.getComputedStyle() and then looking up those
properties in the Element.computedStyleMap() StylePropertyMap, and checking
that they are not null.

Two CSS properties were causing us to fail this subtest:
- "alt". This is a non-standard property of string type. It's value is the
  empty String by default. CSSStyleValueFactory::reifyValue() would attempt to
  construct a CSSKeywordValue for this string. However, CSSKeywordValue::create()
  would throw when the string is empty (because that's what the JS-exposed
  constructor is supposed to do per the specification). To avoid the issue, we
  now construct the CSSKeywordValue by calling CSSKeywordValue::rectifyKeywordish()
  which doesn't do any string validation.
- "size". This is a standard property which was exposed via window.getComputedStyle()
  but looking it up in the StylePropertyMap would return null. The reason for
  this is since we don't support this property in
  ComputedStyleExtractor::valueForPropertyInStyle() (with a comment stating so) and
  we just return null. To address this issue, I am now hiding the @page "size"
  property from computed properties.

* LayoutTests/imported/w3c/web-platform-tests/css/css-typed-om/the-stylepropertymap/computed/computed.tentative-expected.txt:
* Source/WebCore/css/CSSProperties.json:
* Source/WebCore/css/typedom/CSSStyleValueFactory.cpp:
(WebCore::CSSStyleValueFactory::reifyValue):

Canonical link: https://commits.webkit.org/257245@main